Homepage - fixed main section on mobile view.

--- a/src/scss/_components/homepage/_main.scss
+++ b/src/scss/_components/homepage/_main.scss
@@ -2,8 +2,14 @@
 
 .main {
 	position: relative;
+	min-height: 767px;
 	height: calc(100vh - 179px);
 	padding-bottom: 100px;
+	@include adaptive(767) {
+		min-height: unset;
+		height: auto;
+		padding-bottom: 50px;
+	}
 
 	&__bg {
 		position: absolute;
@@ -41,6 +47,8 @@
 			padding-left: 0;
 		}
 		@include adaptive(767) {
+			min-height: calc(667px - 125px);
+			height: calc(100vh - 125px);
 			padding-right: 50px;
 		}
 	}
@@ -75,8 +83,11 @@
 		width: 100%;
 		padding-top: 61px;
 		@include adaptive(1023) {
-			flex-direction: column-reverse;
+			flex-direction: column;
 			padding-top: 161px;
+		}
+		@include adaptive(767) {
+			padding-top: 121px;
 		}
 
 		&-left,
