--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -68,6 +68,10 @@
 	width: 100%;
 	max-width: 360px;
 	margin-bottom: 27px;
+	@include adaptive(767) {
+		margin-left: auto;
+		margin-right: auto;
+	}
 
 	input {
 		outline: none;
